# CSMS

./: README.md  pyproject.toml  requirement.txt  vercel.json
src/: index.py
src/app/commons/: settings.py
src/app/database/: connection.py
src/app/docs/: description.py
src/app/routers/: __init__.py  root.py  schema.py  user.py
